# reactotron

./: .babelrc  .editorconfig  .env  .eslintrc.js  .gitattributes  .gitignore  .npmignore  .nxignore  .prettierignore  .prettierrc  .releaserc  .tool-versions  .yarnrc.yml  CHANGES.md  CLAUDE.md  Gemfile  LICENSE  README.md  _coverpage.md  _sidebar.md  babel.config.js  bump_client.sh  configuration.md  custom-commands.md  getting-started.md  gulpfile.js  index.html  index.js  lerna.json  main.development.js  nx.json  package-lock.json  package.js  package.json  plugins.md  reactotron-react-js.d.ts  reactotron-react-native.d.ts  reactotron-redux.d.ts  readme.md  rebuild.sh  (+16 more)
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  renovate.json
.storybook/: config.js  webpack.config.js
App/: app.global.css  index.tsx
apps/reactotron-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/reactotron-app/src-tauri/capabilities/: default.json
apps/reactotron-app/src-tauri/src/: lib.rs  main.rs  reactotron_core_server.rs
apps/reactotron-native/tm/: AppTurboModules.podspec  CMakeLists.txt  NativeSampleModule.cpp  NativeSampleModule.h  NativeSampleModule.ts  NativeWebsocketModule.cpp  NativeWebsocketModule.h  NativeWebsocketModule.ts
client/: client.js  dom.server.js  dom.webpack.config.js  index.android.js  index.html  index.ios.js  index.rnw.js  index.web.js  package.json  rnw.webpack.config.js  web-html.ejs  webpack.config.js
configs/: webpack.config.base.js  webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.prod.babel.js
docs/: mcp.md  (+24 more)
(+1558 files in other folders)
